--- a/Finalproject/FooR/vignettes/foor.Rmd
+++ b/Finalproject/FooR/vignettes/foor.Rmd
@@ -1,12 +1,13 @@
 ---
-title: "A concise visualization of earthquakes in the world"
+title: "FooR"
 author: "J. Antonio García, jose.ramirez@cimat.mx"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+  %\VignetteIndexEntry{FooR}
+  
 ---
 
 
